--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^13.0.0",
         "@testing-library/user-event": "^13.2.1",
-        "gh-pages": "^4.0.0",
         "node-sass": "^7.0.1",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
@@ -18,8 +17,11 @@
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.0"
     },
+    "devDependencies": {
+        "gh-pages": "^4.0.0"
+    },
     "scripts": {
-        "predeploy": "yarn run build",
+        "predeploy": "npm run build",
         "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
